data pre-processing

--- a/520H0562_NguyenQuynhNhu.ipynb
+++ b/520H0562_NguyenQuynhNhu.ipynb
@@ -443,7 +443,143 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Data pre-processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature seleection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin',\n",
+      "       'Embarked'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train = train_data.drop('Survived', axis=1)  # Assuming 'Survived' is the target column\n",
+    "y_train = train_data['Survived']\n",
+    "\n",
+    "# With human knowledge, we can easily recognize that the Id and Name of the Passenger, \n",
+    "# although they have a relatively high correlation on the heatmap, are certainly not \n",
+    "# decisive factors for the survival of the Passenger. Therefore, we will exclude these two features from the training data.\n",
+    "x_train = x_train.drop('PassengerId', axis=1)\n",
+    "x_train = x_train.drop('Name', axis= 1)\n",
+    "\n",
+    "# Check the reminder features\n",
+    "print(x_train.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Missing value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "#Handle missing value with median\n",
+    "def handle_missing_values(x_train):\n",
+    "    imputer = SimpleImputer(strategy='median')\n",
+    "\n",
+    "    x_train_imputed = pd.DataFrame(imputer.fit_transform(x_train), columns=x_train.columns)\n",
+    "\n",
+    "    return x_train_imputed\n",
+    "\n",
+    "\n",
+    "x_train = handle_missing_values(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pclass column missing values: 0\n",
+      "Sex column missing values: 0\n",
+      "Age column missing values: 0\n",
+      "SibSp column missing values: 0\n",
+      "Parch column missing values: 0\n",
+      "Ticket column missing values: 0\n",
+      "Fare column missing values: 0\n",
+      "Cabin column missing values: 0\n",
+      "Embarked column missing values: 0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check missing value\n",
+    "def display_missing(data):    \n",
+    "    for col in data.columns.tolist():          \n",
+    "        print('{} column missing values: {}'.format(col, data[col].isnull().sum()))\n",
+    "    print('\\n')\n",
+    "    \n",
+    "display_missing(x_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         1.         0.27117366 ... 0.01415106 1.         0.66666667]\n",
+      " [0.         0.         0.4722292  ... 0.13913574 0.55102041 0.        ]\n",
+      " [1.         0.         0.32143755 ... 0.01546857 1.         0.66666667]\n",
+      " ...\n",
+      " [1.         0.         0.34656949 ... 0.04577135 1.         0.66666667]\n",
+      " [0.         1.         0.32143755 ... 0.0585561  0.40816327 0.        ]\n",
+      " [1.         1.         0.39683338 ... 0.01512699 1.         0.33333333]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "#Normalize with MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(x_train)\n",
+    "X_scaled = scaler.transform(x_train)\n",
+    "\n",
+    "print(X_scaled)"
+   ]
   }
  ],
  "metadata": {
